--- a/requirements.txt
+++ b/requirements.txt
@@ -96,6 +96,7 @@ protobuf==4.25.4
 pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.9.1
 pydantic-settings==2.5.2
@@ -113,6 +114,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.9.11
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.8.1
@@ -129,6 +131,7 @@ starlette==0.38.5
 streamlit==1.38.0
 sympy==1.13.2
 tenacity==8.5.0
+tiktoken==0.7.0
 tokenizers==0.20.0
 toml==0.10.2
 tornado==6.4.1
